02-Oauth2/backend/_openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-playground-backend
  labels:
    app: oauth-playground-backend
    app.kubernetes.io/name: oauth-playground-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: rhbk-playground
    app.openshift.io/runtime: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-playground-backend
  template:
    metadata:
      labels:
        app: oauth-playground-backend
        app.kubernetes.io/name: oauth-playground-backend
    spec:
      containers:
        - name: oauth-playground-backend
          image: quay.io/jnyilimbibi/oauth-playground-backend:1.0.0
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /public
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /public
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: keycloak-config
              mountPath: /opt/app-root/src/keycloak.json
              subPath: keycloak.json
              readOnly: true
      volumes:
        - name: keycloak-config
          configMap:
            name: oauth-playground-backend-config
