02-Oauth2/backend/_openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: oauth-playground-backend
  labels:
    app: oauth-playground-backend
    app.kubernetes.io/name: oauth-playground-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: rhbk-playground
spec:
  to:
    kind: Service
    name: oauth-playground-backend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
